unit_8/css/style.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans: 300);
@import url(https://fonts.googleapis.com/css?family=Dosis:200);


* { margin:0; padding:0; box-sizing:border-box; }
body {
	letter-spacing: 0.15em;
	font-weight: 100;
	font-size:16px;
	font-family: 'Open Sans', sans-serif;
	color: #FFFFFF;
}
h1,h2 {
	font-family: 'Dosis', sans-serif;
	font-size: 3em;
	line-height: 1.5em;
	margin: auto;
	font-weight: 200;
	padding: 1.5em;
	width: 100%;
}
h3 {
	font-size: 1em;
}
a {
	color: #FFFFFF;
	text-decoration: none;
}
a:visited {
	color: #FFFFFF;
}
p{
	color: #3F464C;
	text-align: left;
	line-height: 1.618em;
	margin: 1.618em;
}
.container, #container_portfolio_page, #container_about_page {
	height: 100vh;
	margin: 1% 1% 5%;
	width: 98%;
	text-align: center;
	background-color: #FFFFFF;
	clear: both;
}
#home_page, #about, #portfolio {
	width: 24.25%;
	height: 96%;
	margin-right: 1%;
	float: left;
	box-shadow:2px 2px 4px rgba(0,0,0,.25);
	border-radius:.25em;
}
#about_page, #portfolio_page {
	background-color: #7ECEFC;
	width: 24.25%;
	height: 96%;
	float: left;
	box-shadow:2px 2px 4px rgba(0,0,0,.25);
	border-radius:.08333em;
	color: #FFFFFF;
}
#photo {
	width: 24.25%;
	height: 96%;
	margin-right: 0;
	float: left;
	border-radius: .25em;
}
#home_page {
	background-color: #FF7F66;
}
/*#home_page:hover {
	background-color: #F8AD99;
}*/
#logo {
	max-width: 100%
}
#portfolio {
	background-color: #328DC4;

}
/*#portfolio:hover{
	background-color: #B5DDF5;
}*/
#about {
	background-color: #7ECEFC;
}
/*#about:hover{
	background-color: #88B1D8;
}*/
#photo {
	background-image:url(../images/gug.png);
	background-size:cover;
	background-repeat:no-repeat;
	background-position:bottom;
}
.contact_icons {
	width: 55px;
	height: 55px;
	float: left;
	max-width: 100%;
	vertical-align: middle;
}
#contact {
	display:block;
	margin: auto;
	width: 18em;
}
#contact img {
	vertical-align: middle;
}
#contact div {
	overflow:hidden;
	width: 100%;
	margin: .5em 0;
}
#contact p {
	color: #FFF;
	font-size: .75em;
	margin: 1.618em;
	text-align: left;
	width: 100%;
	position: relative;
	left: 1em;
}
#about_text, #gallery {
	float: left;
	width: 75.75%;
}
#portfolio_page {
	background-color: #328DC4;
}
#gallery {
	height: 100%;
}
.portfolioItem {
	color: #3F464C;
	text-align: left;
	float: left;
	width: 32.02%;
	margin-left: 1.25%;
	padding-bottom: 3%;
	display: block;
}
.portfolioItem h3, .portfolioItem p, .portfolioItem img {
	width: 100%;
}
.portfolioItem h3 {
	text-transform: lowercase;
	text-align: center;
}
.portfolioItem p {
	font-size: .75em;
	margin: 0 auto;
	line-height: 1em;
	text-align: center;
}
.portfolioItem img {
	border-radius: .25em;
	height: 100%;
}
#about_text {
	padding: 3em 3em 0;
	margin: 0 auto;
	width: 63%;
	text-align: left;
}
#about_text p {
	line-height: 2em;
}
.contact_icons2 {
	color: #3F464C;
	float: left;
}
#contact2 a {
	color: #3F464C;
}
#contact2 a: visited {
	color: #3F464C;
}
#contact2 {
	width: 65%;
	float: left;
	padding: 0 3em;
}
#contact2 p {
	font-size: .75em;
	position: relative;
	left: 1em;
}
#phone2, #email2, #linkedin2 {
	width: 100%;
	display: block;
	float: left;
	margin: 0 1.618em;
}
footer {
	background-color: #3F464C;
	width: 98%;
	box-shadow:2px 2px 4px rgba(0,0,0,.25);
	border-radius:.25em;
	margin: 0 1% 1%;
	color: #FFFFFF;
	float: left;
	padding: 2em;
	overflow: hidden;
	clear: both;
}
#copyright {
	float: left;
	width: auto;
	color: #FFFFFF;
	margin: auto;
}
nav {
	display: inline;
	width: auto;
	float: right;
	margin: auto;
	text-align: right;
}
nav a {
	padding: 2em;
	margin: auto;
}

/*media queries*/
@media only screen and (max-width: 1375px) {
h1, h2 {
	font-size: 2.5em;
	}
}
@media only screen and (max-width: 1310px) {
body {
	font-size: 15px;
	letter-spacing: .18em;
}
h1, h2 {
	font-size: 2.5em;
	margin: 0;
}
h1 a, h2 a {
	width: 100%;
	padding: 0;
}
#contact {
	width: 18em;
	left: 5px;
	margin: 1% 7%;
}
#contact2_icons {
	width: 20%;
	height: 20%;
}
}
@media only screen and (max-width: 1150px) {
h1, h2 {
	padding: .2em;
}
.container, #container_about_page, #container_portfolio_page {
	clear: both;
	margin: 1% 1% 5%;
}
#home_page, #portfolio, #about {
	float: none;
	height: 23%;
	display: block;
	width: 100%;
	margin-bottom: 1%;
}
#photo {
	float: none;
	height: 23%;
	display: block;
	width: 100%;
}
#contact {
	margin: auto;
	width: 100%;
}
#contact div {
	float: left;
	display: inline-block;
	width: 33.33%;
}
#contact p {
	margin: .5em;
	text-align: center;
	width: auto;
	left: 0;
}
#email_address {
	width: 100%;
}
.contact_icons {
	width: 50%;
	text-align: center;
	float: none;
}
#portfolio_page, #about_page {
	float: none;
	height: 10%;
	width: 100%;
	padding: .3em;
	display: block;
	clear: both;
	margin-bottom: 5%;
}
#logo {
	width: 50%;
	height: 50%;
}
#gallery, #about_text {
	margin: 0 3em;
	width: 90%;
	height: auto;
	padding: 0 3em;
}
#about_text p {
	margin: 0 1.618em 1.618em;
}
#photo {
	background-image: url(../images/gug2.png);
	background-position: top;
}
.portfolioItem {
	margin: 1.618;
}
#contact2 {
	width: 90%;
	padding: 3em;
	margin: 0 3em;
}
#contact2_icons {
	width: 20%;
}
footer {
	padding: 1em;
}
}
@media only screen and (max-width: 945px) {
.container {
	margin: 2%;
}
#container_portfolio_page, #container_about_page {
	height: auto;
	margin: 2%;
}
h1, h2 {
	padding: .2em;
}
#home_page, #portfolio, #about {
	margin-bottom: 2%;
	height: 21.5%;
}
#photo {
	height: 21.5%;
}
#logo {
	margin: 0;
}
#home_page, #about, #portfolio, #photo, #portfolio_page, #about_page, #footer {
	width: 98%;
}
#contact p {
	display: none;
}
#gallery {
	margin: auto;
}
#gallery, #about_text {
	margin: 0 1em;
}
.portfolioItem {
	float: left;
	height: 100%;
}
#contact2 {
	margin: 0 1em;
}
footer {
	margin: 3%;
	width: 94%;
}
}
@media only screen and (max-width: 680px) {
#about_text p {
	line-height: 1.618em;
	margin: 1.618em;
}
#gallery, #about_text, #contact2 {
	width: 80%;
	padding: 0;
	margin: 2.5em;
}
nav a {
		padding: 1em;
	}
}
@media only screen and (max-width: 530px) {
#about_text, #gallery, #contact2 {
	margin: 0 1em;
	float: none;
}
#about_text p {
	line-height: 1.5em;
}
#contact2 {
	padding: 0;
	margin: 1em;
}
.portfolioItem {
	width: 45%;
}
#copyright {
	display: none;
}
}
@media only screen and (max-width: 400px) {
#about_text, #gallery, #contact2 {
	padding: 0;
	margin: 1.25em;
}
#contact2 p {
	line-height: 0;
	font-size: .75em;
}
#copyright {
	font-size: .75%;
}
nav a {
	padding: .3em;
	font-size: .75em;
}
}
@media only screen and (max-width: 320px) {
#logo {
	margin: -15px;
}
}

